--- a/views/create_accont/create_account.html
+++ b/views/create_accont/create_account.html
@@ -14,24 +14,18 @@
   <link rel="stylesheet" href="create_account.css">
   <link rel="stylesheet" href="../../css/sitemap.css">
   <link rel="stylesheet" href="../../css/footer.css">
-  
-  <!-- Stepper -->
-  <link rel="stylesheet" href="../../libs/bs_step/bs-stepper.min.css">
-
-  <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4.3.2/css/metro-all.min.css">
-  
 </head>
 <body>
   
   <header class="container-fluid">
     <nav class="navbar container navbar-expand-lg p-0">
-      
       <a class="navbar-brand" href="#">
         <img  src="../../assets/svg/little-invest.svg" alt="">
       </a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">.</span>
     </button>
     
     <div class="collapse navbar-collapse d-flex justify-content-end " id="navbarNav" >
@@ -55,17 +49,8 @@
     <h1>Faça a sua inscrição</h1>
   </div>
   <div class="container">
-    <div data-role="stepper" data-steps="5" id="stepper"></div>
 
-    <div class="d-flex flex-justify-center mt-4">
-      <button class="button m-1" onclick="stepperMethod('first')">First</button>
-      <button class="button m-1" onclick="stepperMethod('prev')">Prev</button>
-      <button class="button m-1" onclick="stepperMethod('next')">Next</button>
-      <button class="button m-1" onclick="stepperMethod('last')">Last</button>
-    </div>
   </div>
-
-
 
 
 </section>
@@ -106,10 +91,8 @@
 </section>
 
 
+<script src="../../libs/jquery/jquery.min.js"></script>
 <script src="../../libs/bootstrap4_5/js/bootstrap.min.js"></script>
 <script src="../../js/script.js"></script>
-<script src="../../libs/bs_step/bs-stepper.min.js"></script>
-<script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
-<script src="../../libs/jquery/jquery.min.js"></script>
 </body>
 </html>
